--- a/DAY2 TASK/index.html
+++ b/DAY2 TASK/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAY-1 TASK</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -14,7 +15,20 @@
     <li>CSS</li>
     <li>JavaScript</li>
 </ul>
-
+<div class="card-container">
+        <div class="card">
+            <h3>Front End</h3>
+            <p>HTML, CSS, JavaScript, React</p>
+        </div>
+        <div class="card">
+            <h3>Back End</h3>
+            <p>Node.js, Express.js, MongoDB</p>
+        </div>
+        <div class="card">
+            <h3>Tools</h3>
+            <p>Git, GitHub, VS Code</p>
+        </div>
+    </div>
 <form>
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br>
