--- a/DAY2 TASK/index.html
+++ b/DAY2 TASK/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAY-1 TASK</title>
+    <title>DAY-2 TASK</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,13 +32,13 @@
         </div>
     </div>
 <form>
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name"><br>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
 
-        <label for="email">Email:</label><br>
-        <input type="Email" id="email" name="email">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
 
-        <input type="Submit" value="Submit">
+        <input type="submit" value="submit">
     </form>
 
 </body>
